chore: update notebook :unicorn:

--- a/iris_visualization.Rmd
+++ b/iris_visualization.Rmd
@@ -7,12 +7,11 @@ knit: (function(input_file, encoding) {
  output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 ---
 
-The Iris flower data set is a multivariate data set introduced by the British statistician and biologist Ronald Fisher in his 1936 paper "The use of multiple measurements in taxonomic problems as an example of linear discriminant analysis".
+The Iris flower data set is a multivariate data set introduced by the British statistician and biologist Ronald Fisher in his 1936 paper "The use of multiple measurements in taxonomic problems as an example of linear discriminant analysis." The dataset contains four features (length and width of sepals and petals) of 50 samples of three species of Iris (Iris setosa, Iris virginica, and Iris versicolor). These measures were used to create a linear discriminant model to classify the species.
+
+In this project, I practiced some data visualization techniques on the Iris dataset with R by performing frequency analysis, density analysis, histogram, scatterplot, and correlation box plot.
 
 ![Iris Flower Species](./flowers.png)
-The dataset contains four features (length and width of sepals and petals) of 50 samples of three species of Iris (Iris setosa, Iris virginica and Iris versicolor). These measures were used to create a linear discriminant model to classify the species.
-
-In this project, I practice some data visualization techniques with R by performing frequency analysis, density analysis
 
 ---
 
